--- a/EV_Model_all/Notebooks/us_gov_cleaning.ipynb
+++ b/EV_Model_all/Notebooks/us_gov_cleaning.ipynb
@@ -5564,74 +5564,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lets guess our parameters are\n",
-      "['County', 'Population estimates base, April 1, 2010,  (V2017)', 'Persons under 5 years, percent', 'Persons under 18 years, percent', 'Persons 65 years and over, percent', 'White alone, percent', 'Black or African American alone, percent', 'American Indian and Alaska Native alone, percent', 'Asian alone, percent', 'Native Hawaiian and Other Pacific Islander alone, percent', 'Two or More Races, percent', 'Hispanic or Latino, percent', 'White alone, not Hispanic or Latino, percent', 'Veterans, 2012-2016', 'Housing units,  July 1, 2017,  (V2017)', 'Median gross rent, 2012-2016', 'Households, 2012-2016', 'Persons per household, 2012-2016', 'Language other than English spoken at home, percent of persons age 5 years+, 2012-2016', 'High school graduate or higher, percent of persons age 25 years+, 2012-2016', \"Bachelor's degree or higher, percent of persons age 25 years+, 2012-2016\", 'Mean travel time to work (minutes), workers age 16 years+, 2012-2016', 'Median household income (in 2016 dollars), 2012-2016', 'Persons in poverty, percent']\n"
+      "Lets guess our parameters are\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['County',\n",
+       " 'Population estimates base, April 1, 2010,  (V2017)',\n",
+       " 'Persons under 5 years, percent',\n",
+       " 'Persons under 18 years, percent',\n",
+       " 'Persons 65 years and over, percent',\n",
+       " 'White alone, percent',\n",
+       " 'Black or African American alone, percent',\n",
+       " 'American Indian and Alaska Native alone, percent',\n",
+       " 'Asian alone, percent',\n",
+       " 'Native Hawaiian and Other Pacific Islander alone, percent',\n",
+       " 'Two or More Races, percent',\n",
+       " 'Hispanic or Latino, percent',\n",
+       " 'White alone, not Hispanic or Latino, percent',\n",
+       " 'Veterans, 2012-2016',\n",
+       " 'Housing units,  July 1, 2017,  (V2017)',\n",
+       " 'Median gross rent, 2012-2016',\n",
+       " 'Households, 2012-2016',\n",
+       " 'Persons per household, 2012-2016',\n",
+       " 'Language other than English spoken at home, percent of persons age 5 years+, 2012-2016',\n",
+       " 'High school graduate or higher, percent of persons age 25 years+, 2012-2016',\n",
+       " \"Bachelor's degree or higher, percent of persons age 25 years+, 2012-2016\",\n",
+       " 'Mean travel time to work (minutes), workers age 16 years+, 2012-2016',\n",
+       " 'Median household income (in 2016 dollars), 2012-2016',\n",
+       " 'Persons in poverty, percent']"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "ind=-1\n",
-    "for i in np.array(df_all.columns):\n",
-    "    ind+=1\n",
+    "#ind=-1\n",
+    "#for i in np.array(df_all.columns):\n",
+    "#    ind+=1\n",
     "#    print(i,ind)\n",
     "\n",
     "#[0,1,4,5,6,8,9,10,11,12,13,14,15,16,18,23,25,26,28,29,30,41,42,44]\n",
     "\n",
     "print('Lets guess our parameters are')\n",
-    "print(list(df_all.columns[features]))"
+    "list(df_all.columns[features])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Lets guess that some important indicaters are: \n",
-    "+ Persons 65 years and over, percent\n",
-    "\n",
-    "+ Median gross rent\n",
-    "\n",
-    "+ Persons per household\n",
-    "\n",
-    "+ High school graduate or higher\n",
-    "\n",
-    "+ White alone\n",
-    "\n",
-    "+ Persons in povery\n",
-    "\n",
-    "+ Median household income\n",
-    "\n",
-    "+ Mean travel to work\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
